--- a/app/src/main/res/layout/activity_folder_content.xml
+++ b/app/src/main/res/layout/activity_folder_content.xml
@@ -5,12 +5,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_main"
-        tools:context=".MainActivity">
+        tools:context=".FolderContentActivity">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/show_folder_recycler"
+            android:id="@+id/folder_content_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
